--- a/tex/Foundations/Numbers.tex
+++ b/tex/Foundations/Numbers.tex
@@ -16,7 +16,7 @@
 		Also required are some fundamental axioms of logic often referred to as the \href{https://en.wikipedia.org/wiki/Law_of_thought}{Laws of Thought - Wikipedia}.
 			
 		\bigskip
-		\subsubsection{Peano Axioms}
+		\subsubsection{Peano Axioms}\label{def:peano-arithmetic}
 		
 		\begin{axiom}{Closure under addition:}\\ For all $a,b \in \N{}$ we have $a + b \in \N{}$.	
 		\end{axiom}
