--- a/tex/Pure Mathematics.tex
+++ b/tex/Pure Mathematics.tex
@@ -8,16 +8,18 @@
 	\maketitle
 	
 	\chapter{Foundations}\clearpage
-	\searchableSection{Discrete Maths}{set theory, logic}
-	\subfile{\foundationsDir/Axioms}
-	\newpage
+	\searchableSection{Logic, Sets and Relations}{set theory, logic}
 	\subfile{\foundationsDir/Logic}
 	\newpage
-	\subfile{\foundationsDir/Functions}
+	\subfile{\foundationsDir/Relations}
+	\newpage
+	\subfile{\foundationsDir/Axioms}
+	\newpage
+	\subfile{"\foundationsDir/Numbers"}
 	\newpage
 	\subfile{"\foundationsDir/Modular"}
 	\newpage
-	\subfile{"\foundationsDir/Numbers"}
+	\subfile{"\foundationsDir/Graph"}
 	\newpage
 	
 	\searchableChapter{Algebra}{abstract algebra, complex numbers}\clearpage
